--- a/firebase.json
+++ b/firebase.json
@@ -7,13 +7,13 @@
       "**/node_modules/**"
     ]
   },
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
-    ],
-    "source": "functions"
-  },
+  // "functions": {
+  //   "predeploy": [
+  //     "npm --prefix \"$RESOURCE_DIR\" run lint",
+  //     "npm --prefix \"$RESOURCE_DIR\" run build"
+  //   ],
+  //   "source": "functions"
+  // },
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
